--- a/css/style.css
+++ b/css/style.css
@@ -1056,6 +1056,16 @@ transform: scale(1);
 
 
 
+@media only screen and (max-width:357.98px){
+    .modal{
+        max-width: 288px;
+    }
+}
+
+
+
+
+
 /*Phone menu*/
 
 .menu-btn{
