--- a/css/style.css
+++ b/css/style.css
@@ -743,7 +743,6 @@ color: #2E2F42;
         transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .image-box {
-
     position: relative;
     overflow: hidden;
 }
@@ -793,6 +792,14 @@ color: #2E2F42;
     .portfolio-list .list-title  {
         font-weight: 700;
 }
+}
+
+
+@media only screen and (max-width: 757px) {
+    .portfolio-item .list-title {
+    text-align: left;
+    margin-left: 0;
+    }
 }
 /* Footer */
 
