--- a/css/style.css
+++ b/css/style.css
@@ -255,8 +255,8 @@ color: #404BBF;
 /* Hero section */
 
 .hero-section {
-    padding-top: 188px;
-    padding-bottom: 188px;
+    padding-top: 72px;
+    padding-bottom: 72px;
     background-image: 
     linear-gradient(to bottom, 
     rgba(46, 47, 66, 0.7), 
@@ -267,7 +267,14 @@ color: #404BBF;
     background-position: center;
     background-size: cover;
     margin: 0 auto;
+
 }
+
+
+
+
+
+
 .hero-section-title {
     color: #FFF;
     text-align: center;
@@ -283,6 +290,24 @@ color: #404BBF;
 }
 
 
+@media screen and (min-width:768px){
+    .hero-section-title{
+        font-size: 56px;
+        margin-bottom: 36px;
+
+}
+}
+
+@media screen and (min-width:1158px){
+    .hero-section-title{
+
+        margin-bottom: 48px;
+
+}
+}
+
+
+
 @media (min-resolution:192dpi) {
     .hero-section{
         background-image: 
@@ -296,6 +321,8 @@ color: #404BBF;
 
 @media screen and (min-width:768px){
     .hero-section{
+        padding-top: 112px;
+        padding-bottom: 112px;
         background-image: 
         linear-gradient(to bottom, 
         rgba(46, 47, 66, 0.7), 
@@ -334,6 +361,8 @@ color: #404BBF;
 
 @media screen and (min-width:1158px){
     .hero-section{
+        padding-top: 188px;
+        padding-bottom: 188px;
         background-image: 
         linear-gradient(to bottom, 
         rgba(46, 47, 66, 0.7), 
@@ -385,7 +414,7 @@ color: #404BBF;
 
 .about {
     padding-top: 96px;
-    padding-bottom: 120px;
+    padding-bottom: 96px;
 }
 .visually-hidden {
     position: absolute;
@@ -461,6 +490,7 @@ letter-spacing: 0.02em;
     @media only screen and (min-width: 768px) {
         .about {
             padding-top: 120px;
+            padding-bottom: 120px;
         }
         }
 
@@ -495,7 +525,7 @@ letter-spacing: 0.02em;
         }
         
 
-        @media only screen and (max-width: 768px) {
+        @media only screen and (max-width: 1158px) {
             .about .list-text {
                font-weight: 500;
             
@@ -773,7 +803,7 @@ color: #2E2F42;
         letter-spacing: 0.4px;
         margin-bottom: 8px;
 }
-.portfolio-list .list-text {
+.list-text-portfolio {
     color: #434455;
         font-size: 16px;
         font-weight: 400;
@@ -782,11 +812,7 @@ color: #2E2F42;
 }
 
 
-@media only screen and (max-width: 1158px) {
-    .portfolio-list .list-text {
-        font-weight: 500;
-}
-}
+
 
 @media only screen and (max-width: 1158px) {
     .portfolio-list .list-title  {
@@ -1143,7 +1169,7 @@ gap: 24px;
 
 .form-agreement{
     
-    display: block;
+
     margin-bottom: 24px;
     color: var(--LIGHT-SLATE, #8E8F99);
     font-size: 14px;
@@ -1151,10 +1177,8 @@ gap: 24px;
     letter-spacing: -0.02em;
     color: var(--LIGHT-SLATE, #8E8F99);
     user-select: none;
-    
+
 }
-
-
 
 
 
@@ -1171,8 +1195,12 @@ gap: 24px;
     border-radius: 2px;
     fill: transparent; 
     margin-right: 8px;
+    flex-shrink: 0;
 }
 
+.form-label{
+    display: flex;
+}
 
 
 .checkbox:checked + .form-label .form-agreement-checkbox{
@@ -1259,6 +1287,8 @@ transform: scale(1);
     flex-direction: column;
     width: 100%;
     height: 100%;
+    padding: 72px 14px 40px;
+    position: relative;
 
 }
 
@@ -1287,7 +1317,7 @@ transform: scale(1);
     flex-direction: column;
     width: 100%;
     height: 100%;
-    padding: 72px 14px 40px;
+
 
     background-color: #FFF; 
     transform: translateX(-100%);
@@ -1495,6 +1525,13 @@ letter-spacing: 0.32px;
 text-align: left;
 }
 
+@media only screen and (min-width: 767.98px) {
+    .mobile-menu-socials {
+        gap: 16px;
+        margin-right: 80px;
+    }
+}
+
 
 
 @media only screen and (max-width: 767.98px) {
@@ -1504,18 +1541,21 @@ text-align: left;
 }
 
 
-@media only screen and (min-width: 1158px) {
-    .web-footer-mid{
-        margin-right: auto;
-    }
-}
-
-
 
 .web-footer-socials{
     gap: 16px;
     justify-content: center;
 }
+
+
+@media only screen and (min-width: 1158px) {
+    .web-footer-socials{
+        
+        
+        margin-right: 80px;
+    }
+}
+
 
 .web-footer-caption{
     margin-bottom: 16px;
@@ -1550,11 +1590,13 @@ letter-spacing: 0.32px;
 }
 
 
+
 @media only screen and (min-width: 768px) {
     .web-footer-label{
         max-width: 264px;
     }
 }
+-for-footer
 
 .web-footer-input{
     width: 264px;
